@@ -1,165 +1,65 @@
 #!/usr/bin/env bash
 # ═══════════════════════════════════════════════════════════════════════════════
-#  setup-kiosk.sh — Sistema kiosk industriale 24/7
+#  setup-kiosk.sh — Sistema kiosk JavaFX 24/7
 #
-#  Uso diretto (zero prerequisiti):
+#  Uso:
 #    curl -fsSL https://raw.githubusercontent.com/accaicedtea/ttetttos/main/setup-kiosk.sh | sudo bash
-#
-#  Oppure con modalita:
-#    sudo bash setup-kiosk.sh          # installazione normale
-#    sudo bash setup-kiosk.sh reset    # RESET COMPLETO: cancella tutto e reinstalla
+#    sudo bash setup-kiosk.sh          # installazione
+#    sudo bash setup-kiosk.sh reset    # reset completo e reinstalla
 #    sudo bash setup-kiosk.sh update   # aggiorna solo il JAR
-#
-#  Il setup scarica automaticamente l'app da GitHub Releases.
-#  Non servono file locali.
 # ═══════════════════════════════════════════════════════════════════════════════
 set -euo pipefail
 
-# ─── Repo GitHub ──────────────────────────────────────────────────────────────
+# ─── Config ───────────────────────────────────────────────────────────────────
 GITHUB_USER="accaicedtea"
 GITHUB_REPO="ttetttos"
-GITHUB_BRANCH="main"
 RELEASE_TAG="v1.0.0"
-
 APP_JAR_URL="https://github.com/${GITHUB_USER}/${GITHUB_REPO}/releases/download/${RELEASE_TAG}/demo-1.jar"
 APP_LIB_URL="https://github.com/${GITHUB_USER}/${GITHUB_REPO}/releases/download/${RELEASE_TAG}/lib.tar.gz"
+JAVAFX_VERSION="21.0.2"
+JAVAFX_URL="https://download2.gluonhq.com/openjfx/${JAVAFX_VERSION}/openjfx-${JAVAFX_VERSION}_linux-x64_bin-sdk.zip"
 
-# ─── Configurazione ───────────────────────────────────────────────────────────
 KIOSK_USER="kiosk"
 APP_DIR="/opt/kiosk"
 LOG_FILE="/var/log/kiosk-setup.log"
 JAVA_OPTS="-Xms64m -Xmx256m"
 API_KEY="${TOTEM_API_KEY:-api_key_totem_1}"
 
-# ─── Colori e log ─────────────────────────────────────────────────────────────
+# ─── Colori ───────────────────────────────────────────────────────────────────
 RED='\033[0;31m'; GRN='\033[0;32m'; CYN='\033[0;36m'; YLW='\033[0;33m'; NC='\033[0m'
-info()  { echo -e "${CYN}[INFO]${NC} $*" | tee -a "${LOG_FILE}"; }
-ok()    { echo -e "${GRN}[ OK ]${NC} $*" | tee -a "${LOG_FILE}"; }
-warn()  { echo -e "${YLW}[WARN]${NC} $*" | tee -a "${LOG_FILE}"; }
-fail()  { echo -e "${RED}[FAIL]${NC} $*" | tee -a "${LOG_FILE}"; exit 1; }
-step()  { echo -e "\n${CYN}━━━ $* ━━━${NC}" | tee -a "${LOG_FILE}"; }
+info() { echo -e "${CYN}[INFO]${NC} $*" | tee -a "${LOG_FILE}"; }
+ok()   { echo -e "${GRN}[ OK ]${NC} $*" | tee -a "${LOG_FILE}"; }
+warn() { echo -e "${YLW}[WARN]${NC} $*" | tee -a "${LOG_FILE}"; }
+fail() { echo -e "${RED}[FAIL]${NC} $*" | tee -a "${LOG_FILE}"; exit 1; }
+step() { echo -e "\n${CYN}━━━ $* ━━━${NC}" | tee -a "${LOG_FILE}"; }
 
 mkdir -p "$(dirname "${LOG_FILE}")"
-echo "" >> "${LOG_FILE}"
-echo "=== Kiosk setup avviato $(date) MODE=${1:-install} ===" >> "${LOG_FILE}"
-
+echo "=== Setup avviato $(date) MODE=${1:-install} ===" >> "${LOG_FILE}"
 [[ $EUID -eq 0 ]] || fail "Eseguire come root: sudo bash $0"
 
-# ═══════════════════════════════════════════════════════════════════════════════
-#  MODALITA RESET — Cancella TUTTO e riparte da zero
-# ═══════════════════════════════════════════════════════════════════════════════
-if [[ "${1:-}" == "reset" ]]; then
-    step "RESET COMPLETO DEL SISTEMA KIOSK"
-    warn "Questo cancella utenti, servizi, app e configurazioni kiosk."
-    warn "Il sistema di base (OS, rete) rimane intatto."
-    echo ""
-
-    # Ferma e disabilita tutti i servizi kiosk
-    for svc in kiosk kiosk-logclean kiosk-logclean.timer \
-                kiosk-nightly-restart kiosk-nightly-restart.timer \
-                kiosk-network-watchdog llamacpp ollama; do
-        systemctl stop    "${svc}.service" 2>/dev/null || true
-        systemctl stop    "${svc}.timer"   2>/dev/null || true
-        systemctl disable "${svc}.service" 2>/dev/null || true
-        systemctl disable "${svc}.timer"   2>/dev/null || true
-        systemctl mask    "${svc}.service" 2>/dev/null || true
-        rm -f "/etc/systemd/system/${svc}.service" \
-              "/etc/systemd/system/${svc}.timer"
-    done
-    systemctl daemon-reload
-
-    # Rimuovi utente kiosk e sua home
-    if id "${KIOSK_USER}" &>/dev/null; then
-        pkill -u "${KIOSK_USER}" 2>/dev/null || true
-        userdel -r "${KIOSK_USER}" 2>/dev/null && info "Utente ${KIOSK_USER} rimosso." || true
-    fi
-
-    # Rimuovi file di configurazione
-    rm -rf "${APP_DIR}"
-    rm -f /etc/sudoers.d/kiosk
-    rm -f /etc/udev/rules.d/99-kiosk.rules
-    rm -f /etc/sysctl.d/99-kiosk.conf
-    rm -f /etc/systemd/system/getty@tty1.service.d/autologin.conf
-    rm -rf /etc/systemd/journald.conf.d/kiosk.conf
-    rm -rf /etc/systemd/system.conf.d/kiosk-oom.conf
-    rm -f /etc/modules-load.d/kiosk.conf
-    rm -rf /usr/share/icons/blank-cursor
-
-    # Rimuovi Ollama se installato
-    command -v ollama &>/dev/null && {
-        info "Rimozione Ollama..."
-        systemctl stop ollama 2>/dev/null || true
-        rm -f /usr/local/bin/ollama
-        rm -rf /usr/share/ollama ~/.ollama
-    }
-
-    # Rimuovi llama-cpp-python
-    pip3 uninstall -y llama-cpp-python 2>/dev/null || true
-    rm -f /etc/systemd/system/llamacpp.service
-
-    # Ripristina default target
-    systemctl set-default multi-user.target 2>/dev/null || true
-    systemctl daemon-reload
-
-    # Smascherano TTY
-    for i in 2 3 4 5 6; do
-        systemctl unmask "getty@tty${i}.service" 2>/dev/null || true
-    done
-
-    ok "Reset completo. Riavvio del setup..."
-    echo ""
-fi
-
-# ═══════════════════════════════════════════════════════════════════════════════
-#  MODALITA UPDATE — Aggiorna solo il JAR
-# ═══════════════════════════════════════════════════════════════════════════════
-if [[ "${1:-}" == "update" ]]; then
-    step "Aggiornamento JAR"
-    systemctl stop kiosk.service 2>/dev/null || true
-    curl -fsSL "${APP_JAR_URL}" -o "${APP_DIR}/demo-1.jar" && {
-        chown "${KIOSK_USER}:${KIOSK_USER}" "${APP_DIR}/demo-1.jar"
-        rm -f "${APP_DIR}/.stop"
-        systemctl start kiosk.service
-        ok "App aggiornata e riavviata."
-    } || fail "Download JAR fallito."
-    exit 0
-fi
-
-echo ""
-echo "╔═══════════════════════════════════════════════════════════════╗"
-echo "║         KIOSK SETUP — Sistema industriale 24/7               ║"
-echo "╚═══════════════════════════════════════════════════════════════╝"
-echo ""
-
-# ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 0 — Rilevamento distro
-# ═══════════════════════════════════════════════════════════════════════════════
-step "Rilevamento sistema operativo"
-
+# ─── Rilevamento distro ───────────────────────────────────────────────────────
 detect_distro() {
-    if   [[ -f /etc/os-release ]]; then source /etc/os-release; echo "${ID:-unknown}"
+    if [[ -f /etc/os-release ]]; then
+        source /etc/os-release
+        echo "${ID:-unknown}"
     elif [[ -f /etc/debian_version ]]; then echo "debian"
-    elif [[ -f /etc/fedora-release ]]; then echo "fedora"
-    elif [[ -f /etc/arch-release ]];   then echo "arch"
+    elif [[ -f /etc/fedora-release ]];  then echo "fedora"
+    elif [[ -f /etc/arch-release ]];    then echo "arch"
     else echo "unknown"; fi
 }
 DISTRO=$(detect_distro)
-info "Distro: $DISTRO"
 
 pkg_install() {
-    local pkgs=("$@")
     case "$DISTRO" in
         debian|ubuntu|raspbian|linuxmint|pop)
-            DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends "${pkgs[@]}" 2>/dev/null || true ;;
+            DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends "$@" 2>/dev/null || true ;;
         fedora|rhel|centos|almalinux|rocky)
-            dnf install -y "${pkgs[@]}" 2>/dev/null || true ;;
+            dnf install -y "$@" 2>/dev/null || true ;;
         arch|manjaro|endeavouros)
-            pacman -S --noconfirm --needed "${pkgs[@]}" 2>/dev/null || true ;;
+            pacman -S --noconfirm --needed "$@" 2>/dev/null || true ;;
         opensuse*|suse*)
-            zypper install -y "${pkgs[@]}" 2>/dev/null || true ;;
-        *)  apt-get install -y "${pkgs[@]}" 2>/dev/null || \
-            dnf install -y "${pkgs[@]}" 2>/dev/null || \
-            warn "Impossibile installare: ${pkgs[*]}" ;;
+            zypper install -y "$@" 2>/dev/null || true ;;
+        *)  apt-get install -y "$@" 2>/dev/null || dnf install -y "$@" 2>/dev/null || true ;;
     esac
 }
 
@@ -176,15 +76,86 @@ pkg_update() {
     esac
 }
 
+# ─── Rilevamento GPU / VM ─────────────────────────────────────────────────────
+detect_gpu() {
+    if lspci 2>/dev/null | grep -qi "vmware\|virtualbox\|qxl\|virtio-vga\|virgl"; then
+        echo "vm"
+    elif lspci 2>/dev/null | grep -qi "nvidia"; then
+        echo "nvidia"
+    elif lspci 2>/dev/null | grep -qi "intel.*graphics\|intel.*uhd\|intel.*iris"; then
+        echo "intel"
+    elif lspci 2>/dev/null | grep -qi "amd\|ati\|radeon"; then
+        echo "amd"
+    else
+        echo "unknown"
+    fi
+}
+
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 1 — Parametri kernel
+#  MODALITA RESET
+# ═══════════════════════════════════════════════════════════════════════════════
+if [[ "${1:-}" == "reset" ]]; then
+    step "RESET COMPLETO"
+    for svc in kiosk kiosk-logclean kiosk-nightly-restart kiosk-network-watchdog; do
+        systemctl stop    "${svc}.service" 2>/dev/null || true
+        systemctl stop    "${svc}.timer"   2>/dev/null || true
+        systemctl disable "${svc}.service" 2>/dev/null || true
+        systemctl disable "${svc}.timer"   2>/dev/null || true
+        rm -f "/etc/systemd/system/${svc}.service" "/etc/systemd/system/${svc}.timer"
+    done
+    systemctl daemon-reload
+    if id "${KIOSK_USER}" &>/dev/null; then
+        pkill -u "${KIOSK_USER}" 2>/dev/null || true
+        sleep 1
+        userdel -r "${KIOSK_USER}" 2>/dev/null || true
+    fi
+    rm -rf "${APP_DIR}"
+    rm -f /etc/sudoers.d/kiosk /etc/udev/rules.d/99-kiosk.rules
+    rm -f /etc/sysctl.d/99-kiosk.conf
+    rm -rf /etc/systemd/system/getty@tty1.service.d/
+    rm -rf /etc/systemd/journald.conf.d/kiosk.conf
+    rm -rf /etc/systemd/system.conf.d/kiosk-oom.conf
+    rm -rf /usr/share/icons/blank-cursor
+    for i in 2 3 4 5 6; do
+        systemctl unmask "getty@tty${i}.service" 2>/dev/null || true
+    done
+    systemctl set-default multi-user.target 2>/dev/null || true
+    systemctl daemon-reload
+    ok "Reset completato. Reinstallazione in corso..."
+    echo ""
+fi
+
+# ═══════════════════════════════════════════════════════════════════════════════
+#  MODALITA UPDATE
+# ═══════════════════════════════════════════════════════════════════════════════
+if [[ "${1:-}" == "update" ]]; then
+    step "Aggiornamento JAR"
+    systemctl stop kiosk.service 2>/dev/null || true
+    curl -fsSL "${APP_JAR_URL}" -o "${APP_DIR}/demo-1.jar" \
+        && chown "${KIOSK_USER}:${KIOSK_USER}" "${APP_DIR}/demo-1.jar" \
+        && rm -f "${APP_DIR}/.stop" \
+        && systemctl start kiosk.service \
+        && ok "Aggiornato." \
+        || fail "Download fallito."
+    exit 0
+fi
+
+echo ""
+echo "╔═══════════════════════════════════════════════════════════════╗"
+echo "║     KIOSK SETUP — $(echo $DISTRO | tr '[:lower:]' '[:upper:]') — $(date '+%Y-%m-%d')                ║"
+echo "╚═══════════════════════════════════════════════════════════════╝"
+echo ""
+
+GPU=$(detect_gpu)
+info "Distro: $DISTRO | GPU: $GPU"
+
+# ═══════════════════════════════════════════════════════════════════════════════
+#  FASE 1 — Kernel
 # ═══════════════════════════════════════════════════════════════════════════════
 step "Ottimizzazione kernel"
-
 cat > /etc/sysctl.d/99-kiosk.conf << 'SYSCTL'
 kernel.panic                    = 30
 kernel.panic_on_oops            = 1
-kernel.panic_on_unrecovered_nmi = 1
 vm.swappiness                   = 5
 vm.dirty_ratio                  = 20
 vm.dirty_background_ratio       = 5
@@ -200,31 +171,26 @@ SYSCTL
 sysctl -p /etc/sysctl.d/99-kiosk.conf > /dev/null 2>&1 || true
 
 if ! grep -q "noatime" /etc/fstab 2>/dev/null; then
-    sed -i 's/\(ext[234]\|btrfs\|f2fs\)\(.*defaults\)/\1\2,noatime,nodiratime/' \
-        /etc/fstab 2>/dev/null || true
+    sed -i 's/\(ext[234]\|btrfs\|f2fs\)\(.*defaults\)/\1\2,noatime/' /etc/fstab 2>/dev/null || true
 fi
 if ! grep -q "tmpfs.*\/tmp" /etc/fstab 2>/dev/null; then
-    echo "tmpfs /tmp tmpfs defaults,noatime,nosuid,nodev,size=128M 0 0" >> /etc/fstab
-    mount -t tmpfs -o size=128M tmpfs /tmp 2>/dev/null || true
+    echo "tmpfs /tmp tmpfs defaults,noatime,nosuid,nodev,size=256M 0 0" >> /etc/fstab
+    mount -t tmpfs -o size=256M tmpfs /tmp 2>/dev/null || true
 fi
-
 mkdir -p /etc/systemd/system.conf.d/
-cat > /etc/systemd/system.conf.d/kiosk-oom.conf << 'OOMCFG'
+cat > /etc/systemd/system.conf.d/kiosk.conf << 'SYSD'
 [Manager]
 DefaultOOMPolicy=continue
-DefaultTimeoutStartSec=15s
+DefaultTimeoutStartSec=20s
 DefaultTimeoutStopSec=10s
-DefaultRestartSec=3s
-OOMCFG
-
-if modprobe softdog 2>/dev/null; then
+SYSD
+modprobe softdog 2>/dev/null && {
     echo "softdog" >> /etc/modules-load.d/kiosk.conf 2>/dev/null || true
-    cat >> /etc/systemd/system.conf.d/kiosk-oom.conf << 'WDOG'
+    cat >> /etc/systemd/system.conf.d/kiosk.conf << 'WDOG'
 RuntimeWatchdogSec=60
 RebootWatchdogSec=10m
 WDOG
-    ok "Hardware watchdog attivo."
-fi
+}
 ok "Kernel configurato."
 
 # ═══════════════════════════════════════════════════════════════════════════════
@@ -233,95 +199,73 @@ ok "Kernel configurato."
 step "Installazione pacchetti"
 pkg_update
 
-# Determina pacchetto Java
+# Java
 JAVA_PKG="default-jre"
 case "$DISTRO" in
     fedora|rhel|centos|almalinux|rocky) JAVA_PKG="java-21-openjdk-headless" ;;
-    arch|manjaro)                       JAVA_PKG="jre21-openjdk-headless" ;;
-    opensuse*|suse*)                    JAVA_PKG="java-21-openjdk-headless" ;;
-    *)                                  JAVA_PKG="default-jre" ;;
+    arch|manjaro) JAVA_PKG="jre21-openjdk-headless" ;;
+    opensuse*|suse*) JAVA_PKG="java-21-openjdk-headless" ;;
 esac
 
-# Determina pacchetto Mesa
-MESA_PKGS=()
+# Mesa / OpenGL (necessario per JavaFX prism)
 case "$DISTRO" in
     fedora|rhel|centos|almalinux|rocky)
-        MESA_PKGS=(mesa-dri-drivers mesa-libGL mesa-libEGL) ;;
+        MESA_PKGS="mesa-dri-drivers mesa-libGL mesa-libEGL" ;;
     arch|manjaro)
-        MESA_PKGS=(mesa) ;;
+        MESA_PKGS="mesa" ;;
     opensuse*|suse*)
-        MESA_PKGS=(Mesa-dri Mesa-libGL1 Mesa-libEGL1) ;;
-    *)
-        MESA_PKGS=(libgl1-mesa-dri libgl1-mesa-glx libegl1-mesa \
-                   libgles2-mesa mesa-utils) ;;
+        MESA_PKGS="Mesa-dri Mesa-libGL1 Mesa-libEGL1" ;;
+    *)  MESA_PKGS="libgl1-mesa-dri libgl1-mesa-glx libegl1-mesa libgles2-mesa" ;;
 esac
 
 pkg_install \
     cage xwayland \
     dbus dbus-user-session \
-    fonts-dejavu-core \
-    ca-certificates curl wget \
-    pciutils usbutils \
-    util-linux procps iproute2 \
-    lm-sensors python3 python3-pip \
+    fonts-dejavu-core fonts-noto-color-emoji \
+    ca-certificates curl wget unzip \
+    pciutils util-linux procps iproute2 \
+    lm-sensors \
     "${JAVA_PKG}" \
-    "${MESA_PKGS[@]}"
+    ${MESA_PKGS}
 
-# Font emoji
-pkg_install fonts-noto-color-emoji 2>/dev/null || true
-pkg_install unclutter-xfixes       2>/dev/null || true
+pkg_install openjfx 2>/dev/null || true
+pkg_install unclutter-xfixes 2>/dev/null || true
 
-ok "Pacchetti installati."
-
-# ─── Driver GPU ───────────────────────────────────────────────────────────────
-step "Rilevamento GPU"
-
-GPU_VENDOR=""
-if   lspci 2>/dev/null | grep -qi "vmware\|virtualbox\|qxl\|virtio"; then GPU_VENDOR="vm"
-elif lspci 2>/dev/null | grep -qi "nvidia";                            then GPU_VENDOR="nvidia"
-elif lspci 2>/dev/null | grep -qi "intel.*graphics\|intel.*uhd\|intel.*iris"; then GPU_VENDOR="intel"
-elif lspci 2>/dev/null | grep -qi "amd\|ati\|radeon";                 then GPU_VENDOR="amd"
-fi
-info "GPU: ${GPU_VENDOR:-sconosciuta}"
-
-case "$GPU_VENDOR" in
+# Driver GPU specifici
+case "$GPU" in
     nvidia)
         case "$DISTRO" in
-            debian|ubuntu) pkg_install nvidia-driver 2>/dev/null || \
-                           pkg_install xserver-xorg-video-nouveau ;;
-            arch*) pkg_install mesa nvidia 2>/dev/null || true ;;
+            debian|ubuntu)
+                pkg_install nvidia-driver 2>/dev/null || \
+                pkg_install xserver-xorg-video-nouveau 2>/dev/null || true ;;
+            arch*) pkg_install mesa 2>/dev/null || true ;;
         esac ;;
     intel)
         case "$DISTRO" in
-            debian|ubuntu) pkg_install xserver-xorg-video-intel \
-                                        intel-media-va-driver 2>/dev/null || true ;;
-            arch*) pkg_install mesa intel-media-driver vulkan-intel 2>/dev/null || true ;;
+            debian|ubuntu)
+                pkg_install xserver-xorg-video-intel intel-media-va-driver 2>/dev/null || true ;;
+            arch*) pkg_install mesa vulkan-intel 2>/dev/null || true ;;
         esac ;;
     amd)
         case "$DISTRO" in
-            debian|ubuntu) pkg_install xserver-xorg-video-amdgpu \
-                                        firmware-amd-graphics 2>/dev/null || true ;;
+            debian|ubuntu)
+                pkg_install xserver-xorg-video-amdgpu firmware-amd-graphics 2>/dev/null || true ;;
             arch*) pkg_install mesa vulkan-radeon 2>/dev/null || true ;;
         esac ;;
-    vm|"")
-        info "VM / GPU sconosciuta — software rendering."
+    vm|unknown)
+        info "VM / GPU sconosciuta: software rendering."
         case "$DISTRO" in
             debian|ubuntu)
                 pkg_install libgl1-mesa-swrast libgl1-mesa-dri 2>/dev/null || true ;;
             *) pkg_install mesa 2>/dev/null || true ;;
         esac ;;
 esac
-ok "GPU configurata."
-
-
-# FASE 2b — llama.cpp SALTATO (traduzioni predefinite in I18n.java)
-mkdir -p "${APP_DIR}/models"
+ok "Pacchetti installati."
 
 # ═══════════════════════════════════════════════════════════════════════════════
 #  FASE 3 — Utente kiosk
 # ═══════════════════════════════════════════════════════════════════════════════
 step "Utente kiosk"
-
 if ! id "${KIOSK_USER}" &>/dev/null; then
     useradd -m -s /bin/bash -G video,input,render,audio "${KIOSK_USER}" 2>/dev/null || \
     useradd -m -s /bin/bash "${KIOSK_USER}"
@@ -329,127 +273,159 @@ if ! id "${KIOSK_USER}" &>/dev/null; then
     ok "Utente '${KIOSK_USER}' creato."
 else
     usermod -aG video,input,render,audio "${KIOSK_USER}" 2>/dev/null || true
-    info "Utente '${KIOSK_USER}' esistente — gruppi aggiornati."
+    info "Utente '${KIOSK_USER}' esistente."
 fi
-
 KIOSK_HOME=$(eval echo ~"${KIOSK_USER}")
 KIOSK_UID=$(id -u "${KIOSK_USER}")
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 4 — Download e installazione app
+#  FASE 4 — Download app e JavaFX
 # ═══════════════════════════════════════════════════════════════════════════════
-step "Download e installazione app da GitHub"
-
+step "Download applicazione"
 mkdir -p "${APP_DIR}/lib" "${APP_DIR}/logs" "${APP_DIR}/models"
 
-# Scarica JAR principale
+# JAR principale
 info "Download demo-1.jar..."
 if curl -fsSL "${APP_JAR_URL}" -o "${APP_DIR}/demo-1.jar" 2>/dev/null; then
     ok "JAR scaricato."
 else
-    warn "Download JAR da GitHub fallito — cercando file locale..."
-    # Fallback: file locale nella stessa directory dello script
+    warn "Download JAR da GitHub fallito."
     SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]:-$0}")" 2>/dev/null && pwd || echo ".")"
-    if [[ -f "${SCRIPT_DIR}/dist/demo-1.jar" ]]; then
-        cp "${SCRIPT_DIR}/dist/demo-1.jar" "${APP_DIR}/"
-        ok "JAR copiato da file locale."
-    else
-        fail "JAR non trovato. Scarica manualmente in ${APP_DIR}/demo-1.jar"
-    fi
+    [[ -f "${SCRIPT_DIR}/dist/demo-1.jar" ]] \
+        && cp "${SCRIPT_DIR}/dist/demo-1.jar" "${APP_DIR}/" \
+        && ok "JAR copiato da locale." \
+        || fail "JAR non trovato. Impossibile continuare."
 fi
 
-# Scarica librerie JavaFX + dipendenze
+# Librerie (Ikonli, Gson)
 info "Download librerie..."
 if curl -fsSL "${APP_LIB_URL}" 2>/dev/null | tar -xz -C "${APP_DIR}/lib/"; then
     ok "Librerie scaricate."
 else
-    warn "Download lib.tar.gz fallito — cercando file locali..."
+    warn "Download lib.tar.gz fallito."
     SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]:-$0}")" 2>/dev/null && pwd || echo ".")"
-    if ls "${SCRIPT_DIR}/dist/lib/"*.jar &>/dev/null 2>&1; then
-        cp "${SCRIPT_DIR}/dist/lib/"*.jar "${APP_DIR}/lib/"
-        ok "Librerie copiate da file locali."
+    ls "${SCRIPT_DIR}/dist/lib/"*.jar &>/dev/null 2>&1 \
+        && cp "${SCRIPT_DIR}/dist/lib/"*.jar "${APP_DIR}/lib/" \
+        && ok "Librerie copiate da locale." \
+        || warn "Nessuna libreria trovata."
+fi
+
+# ─── JavaFX SDK (nativi Linux — necessari per JavaFX su sistemi senza desktop) ─
+step "Download JavaFX SDK ${JAVAFX_VERSION}"
+JAVAFX_DIR="${APP_DIR}/javafx-sdk"
+
+if [[ ! -d "${JAVAFX_DIR}" ]]; then
+    # Prima prova: usa openjfx di sistema se disponibile
+    FX_SYSTEM=$(find /usr/share/java /usr/lib/jvm -name "javafx.controls.jar" \
+                     2>/dev/null | head -1 | xargs dirname 2>/dev/null || echo "")
+    if [[ -n "${FX_SYSTEM}" ]]; then
+        info "JavaFX di sistema trovato: ${FX_SYSTEM}"
+        mkdir -p "${JAVAFX_DIR}"
+        cp "${FX_SYSTEM}"/*.jar "${JAVAFX_DIR}/" 2>/dev/null || true
+        # Copia anche i .so nativi se presenti
+        find "${FX_SYSTEM}" -name "*.so" 2>/dev/null | \
+            xargs -I{} cp {} "${JAVAFX_DIR}/" 2>/dev/null || true
+        ok "JavaFX di sistema usato."
     else
-        warn "Nessuna libreria trovata — l'app potrebbe non avviarsi."
+        # Seconda prova: scarica da Gluon
+        info "Download JavaFX SDK da Gluon (~80MB, solo JAR+nativi)..."
+        FREE_MB=$(df /tmp --output=avail -m 2>/dev/null | tail -1 || echo 999)
+        if [[ "${FREE_MB}" -lt 300 ]]; then
+            warn "Poco spazio in /tmp (${FREE_MB}MB). Pulizia..."
+            apt-get clean 2>/dev/null || true
+            rm -rf /tmp/javafx-* 2>/dev/null || true
+        fi
+
+        if curl -fsSL "${JAVAFX_URL}" -o /tmp/javafx-sdk.zip 2>/dev/null; then
+            mkdir -p /tmp/javafx-extract/
+            # Estrai SOLO i JAR e i .so, escludi libjfxwebkit.so (~60MB inutile)
+            unzip -q /tmp/javafx-sdk.zip \
+                "javafx-sdk-${JAVAFX_VERSION}/lib/*.jar" \
+                "javafx-sdk-${JAVAFX_VERSION}/lib/*.so" \
+                -d /tmp/javafx-extract/ 2>/dev/null || \
+            unzip -q /tmp/javafx-sdk.zip \
+                -d /tmp/javafx-extract/ \
+                -x "*/libjfxwebkit.so" \
+                -x "*/libgstreamer-lite.so" \
+                -x "*/src.zip" 2>/dev/null || true
+
+            mkdir -p "${JAVAFX_DIR}"
+            cp /tmp/javafx-extract/javafx-sdk-${JAVAFX_VERSION}/lib/* \
+               "${JAVAFX_DIR}/" 2>/dev/null || true
+            # Rimuovi webkit anche se estratto
+            rm -f "${JAVAFX_DIR}/libjfxwebkit.so" \
+                  "${JAVAFX_DIR}/libgstreamer-lite.so" 2>/dev/null || true
+            rm -rf /tmp/javafx-sdk.zip /tmp/javafx-extract/
+            ok "JavaFX SDK installato ($(ls ${JAVAFX_DIR}/*.jar 2>/dev/null | wc -l) JAR)."
+        else
+            warn "Download JavaFX SDK fallito."
+            warn "JavaFX potrebbe non funzionare. Installa manualmente: apt install openjfx"
+        fi
     fi
+else
+    info "JavaFX SDK gia presente."
 fi
 
 chown -R "${KIOSK_USER}:${KIOSK_USER}" "${APP_DIR}"
 chmod 755 "${APP_DIR}"
-ok "App installata in ${APP_DIR}."
 
-# ─── Download JavaFX SDK (nativi Linux inclusi) ───────────────────────────────
-# Non servono moduli separati — JavaFX SDK contiene tutto inclusi i .so nativi
-JAVAFX_VERSION="21.0.2"
-JAVAFX_URL="https://download2.gluonhq.com/openjfx/${JAVAFX_VERSION}/openjfx-${JAVAFX_VERSION}_linux-x64_bin-sdk.zip"
-JAVAFX_ZIP="/tmp/javafx-sdk.zip"
-JAVAFX_DIR="${APP_DIR}/javafx-sdk"
+# ═══════════════════════════════════════════════════════════════════════════════
+#  FASE 5 — Script di lancio
+# ═══════════════════════════════════════════════════════════════════════════════
+step "Script di lancio"
 
-if [[ ! -d "${JAVAFX_DIR}" ]]; then
-    info "Download JavaFX SDK ${JAVAFX_VERSION}..."
-    pkg_install unzip 2>/dev/null || true
-    mkdir -p "${JAVAFX_DIR}"
-
-    if curl -fsSL "${JAVAFX_URL}" -o "${JAVAFX_ZIP}"; then
-        # Estrai SOLO i JAR e i .so necessari — salta libjfxwebkit.so (~50MB inutile)
-        unzip -q "${JAVAFX_ZIP}"             "javafx-sdk-${JAVAFX_VERSION}/lib/*.jar"             "javafx-sdk-${JAVAFX_VERSION}/lib/libglass.so"             "javafx-sdk-${JAVAFX_VERSION}/lib/libjavafx_font*.so"             "javafx-sdk-${JAVAFX_VERSION}/lib/libjavafx_iio.so"             "javafx-sdk-${JAVAFX_VERSION}/lib/libprism_es2.so"             "javafx-sdk-${JAVAFX_VERSION}/lib/libprism_sw.so"             "javafx-sdk-${JAVAFX_VERSION}/lib/libdecora_sse.so"             -d "/tmp/javafx-extract/" 2>/dev/null || true
-
-        # Copia solo i file estratti
-        cp /tmp/javafx-extract/javafx-sdk-${JAVAFX_VERSION}/lib/*.jar            /tmp/javafx-extract/javafx-sdk-${JAVAFX_VERSION}/lib/*.so            "${JAVAFX_DIR}/" 2>/dev/null || true
-
-        rm -rf "${JAVAFX_ZIP}" /tmp/javafx-extract/
-        chown -R "${KIOSK_USER}:${KIOSK_USER}" "${JAVAFX_DIR}"
-        ok "JavaFX SDK installato ($(du -sh ${JAVAFX_DIR} | cut -f1))."
-    else
-        warn "Download JavaFX SDK fallito."
-        rmdir "${JAVAFX_DIR}" 2>/dev/null || true
-    fi
-else
-    info "JavaFX SDK gia presente: ${JAVAFX_DIR}"
-fi
-
-# ─── Script di lancio ─────────────────────────────────────────────────────────
 cat > "${APP_DIR}/run-kiosk.sh" << LAUNCHER
 #!/usr/bin/env bash
-# Launcher JavaFX per kiosk — supporta Wayland reale, Xwayland e VM
+# ── Launcher JavaFX Kiosk ──────────────────────────────────────────────────────
 
-# Imposta DISPLAY per Xwayland se non siamo in Wayland puro
-export DISPLAY="\${DISPLAY:-:0}"
-export WAYLAND_DISPLAY="\${WAYLAND_DISPLAY:-}"
-
-# Rendering: prova OpenGL hardware, poi software
-export PRISM_ORDER="\${PRISM_ORDER:-es2,sw}"
-
-# Rilevamento VM: forza software rendering
-if lspci 2>/dev/null | grep -qi "vmware\|virtualbox\|qxl\|virtio"; then
-    export LIBGL_ALWAYS_SOFTWARE=1
-    export WLR_RENDERER=pixman
-    export WLR_RENDERER_ALLOW_SOFTWARE=1
-    export WLR_NO_HARDWARE_CURSORS=1
+# Module path: preferisce JavaFX SDK, poi sistema, poi lib/
+if [[ -d "${APP_DIR}/javafx-sdk" ]] && ls "${APP_DIR}/javafx-sdk/"*.jar &>/dev/null 2>&1; then
+    FX_PATH="${APP_DIR}/javafx-sdk"
+elif FX_SYS=\$(find /usr/share/java /usr/lib/jvm -name "javafx.controls.jar" 2>/dev/null | head -1 | xargs dirname 2>/dev/null); [[ -n "\${FX_SYS}" ]]; then
+    FX_PATH="\${FX_SYS}"
+else
+    FX_PATH="${APP_DIR}/lib"
 fi
 
-# API key totem
+# Classpath: demo-1.jar + tutte le dipendenze in lib/
+CP="${APP_DIR}/demo-1.jar"
+for jar in "${APP_DIR}/lib/"*.jar; do
+    CP="\${CP}:\${jar}"
+done
+
+# Rendering: software rendering per compatibilita universale
+export LIBGL_ALWAYS_SOFTWARE=1
+export MESA_GL_VERSION_OVERRIDE=3.3
+export GALLIUM_DRIVER=softpipe
+export WLR_RENDERER=pixman
+export WLR_RENDERER_ALLOW_SOFTWARE=1
+export WLR_NO_HARDWARE_CURSORS=1
+export PRISM_ORDER=sw
+
+# API key
 export TOTEM_API_KEY="${API_KEY}"
+
+echo "[Kiosk] Avvio... FX_PATH=\${FX_PATH}" >> "${APP_DIR}/logs/kiosk.log"
 
 exec java \\
     ${JAVA_OPTS} \\
-    --module-path "${APP_DIR}/lib" \\
-    --add-modules javafx.controls,javafx.fxml \\
+    --module-path "\${FX_PATH}" \\
+    --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base \\
     --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED \\
+    --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED \\
     -Djava.awt.headless=false \\
-    -Dprism.order=es2,sw \\
-    -Dprism.verbose=false \\
+    -Dprism.order=sw \\
+    -Dprism.verbose=true \\
     -Dglass.platform=gtk \\
     -Djdk.gtk.version=3 \\
     -Djavafx.animation.fullspeed=true \\
     -XX:+UseG1GC \\
     -XX:MaxGCPauseMillis=50 \\
-    -XX:+DisableExplicitGC \\
     -Dfile.encoding=UTF-8 \\
-    -cp "${APP_DIR}/demo-1.jar" \\
+    -cp "\${CP}" \\
     com.example.App
 LAUNCHER
 chmod +x "${APP_DIR}/run-kiosk.sh"
-chown "${KIOSK_USER}:${KIOSK_USER}" "${APP_DIR}/run-kiosk.sh"
 
 # ─── Script controllo ─────────────────────────────────────────────────────────
 cat > "${APP_DIR}/kiosk-control.sh" << 'CTRL'
@@ -458,122 +434,110 @@ case "${1:-help}" in
     start)   systemctl start  kiosk.service ;;
     stop)    touch /opt/kiosk/.stop; systemctl stop kiosk.service ;;
     restart) rm -f /opt/kiosk/.stop; systemctl restart kiosk.service ;;
-    status)  systemctl status kiosk.service; echo ""; tail -20 /opt/kiosk/logs/kiosk.log ;;
+    status)  systemctl status kiosk.service; echo ""; tail -30 /opt/kiosk/logs/kiosk.log ;;
     log)     journalctl -u kiosk.service -f ;;
     update)
-        echo "Download ultimo JAR da GitHub..."
-        curl -fsSL "https://github.com/accaicedtea/ttetttos/releases/download/v1.0.0/demo-1.jar" \
-            -o /tmp/kiosk-update.jar && {
-            systemctl stop kiosk.service
+        VER="${2:-v1.0.0}"
+        URL="https://github.com/accaicedtea/ttetttos/releases/download/${VER}/demo-1.jar"
+        curl -fsSL "${URL}" -o /tmp/kiosk-update.jar && {
+            systemctl stop kiosk.service 2>/dev/null || true
             cp /tmp/kiosk-update.jar /opt/kiosk/demo-1.jar
             chown kiosk:kiosk /opt/kiosk/demo-1.jar
             rm -f /opt/kiosk/.stop /tmp/kiosk-update.jar
             systemctl start kiosk.service
-            echo "Aggiornato."
+            echo "Aggiornato a ${VER}."
         } || echo "Download fallito."
         ;;
-    reset)
-        echo "Esegui: curl -fsSL https://raw.githubusercontent.com/accaicedtea/ttetttos/main/setup-kiosk.sh | sudo bash -s reset"
-        ;;
     help|*)
-        echo "Uso: kiosk-control {start|stop|restart|status|log|update|reset}"
+        echo "Uso: kiosk-control {start|stop|restart|status|log|update [tag]}"
         ;;
 esac
 CTRL
 chmod +x "${APP_DIR}/kiosk-control.sh"
 ln -sf "${APP_DIR}/kiosk-control.sh" /usr/local/bin/kiosk-control
+chown -R "${KIOSK_USER}:${KIOSK_USER}" "${APP_DIR}"
+ok "Script configurati."
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 5 — Cursore trasparente
+#  FASE 6 — Cursore trasparente
 # ═══════════════════════════════════════════════════════════════════════════════
 step "Cursore trasparente"
-
 mkdir -p /usr/share/icons/blank-cursor/cursors
 python3 - << 'PYEOF'
 import struct, os
-
-magic       = b'Xcur'
-header_size = struct.pack('<I', 16)
-file_ver    = struct.pack('<I', 0x10000)
-ntoc        = struct.pack('<I', 1)
-CHUNK_TYPE  = 0xFFFD0002
-nominal     = 24
-offset      = 16 + 12
-toc  = struct.pack('<III', CHUNK_TYPE, nominal, offset)
-img  = struct.pack('<IIIIIIIII', 9*4, CHUNK_TYPE, nominal, 1, 1, 1, 0, 0, 50) \
-       + b'\x00\x00\x00\x00'
-data = magic + header_size + file_ver + ntoc + toc + img
-
+data = (b'Xcur' + struct.pack('<III', 16, 0x10000, 1) +
+        struct.pack('<III', 0xFFFD0002, 24, 28) +
+        struct.pack('<IIIIIIIII', 36, 0xFFFD0002, 24, 1, 1, 1, 0, 0, 50) +
+        b'\x00\x00\x00\x00')
 base = '/usr/share/icons/blank-cursor/cursors/left_ptr'
-with open(base, 'wb') as f:
-    f.write(data)
-
-names = [
-    'default','arrow','pointer','hand','hand1','hand2','crosshair','cross',
-    'text','xterm','wait','watch','grabbing','grab','fleur','move',
-    'n-resize','s-resize','e-resize','w-resize','ne-resize','nw-resize',
-    'se-resize','sw-resize','col-resize','row-resize','all-scroll',
-    'X_cursor','right_ptr','top_left_arrow','progress','not-allowed',
-]
-for n in names:
+open(base, 'wb').write(data)
+for n in ['default','arrow','pointer','hand','hand1','hand2','crosshair',
+          'text','xterm','wait','watch','grabbing','grab','move',
+          'X_cursor','right_ptr','top_left_arrow','progress','not-allowed']:
     dst = f'/usr/share/icons/blank-cursor/cursors/{n}'
     if not os.path.exists(dst):
         os.symlink('left_ptr', dst)
-print('Cursore OK.')
 PYEOF
-
 cat > /usr/share/icons/blank-cursor/index.theme << 'THEME'
 [Icon Theme]
 Name=blank-cursor
 Comment=Transparent cursor
 Inherits=hicolor
 THEME
-ok "Cursore trasparente installato."
+ok "Cursore trasparente."
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 6 — Servizi systemd
+#  FASE 7 — Servizio systemd
 # ═══════════════════════════════════════════════════════════════════════════════
-step "Servizi systemd"
+step "Servizio systemd"
 
-# ── Servizio principale kiosk ─────────────────────────────────────────────────
-# FIX VM / Xwayland: usa weston o Xwayland come fallback se cage non funziona
+# Crea XDG runtime dir persistente
+mkdir -p "/run/user/${KIOSK_UID}"
+chmod 700 "/run/user/${KIOSK_UID}"
+chown "${KIOSK_USER}:${KIOSK_USER}" "/run/user/${KIOSK_UID}"
+
+# Abilita linger (mantiene la sessione attiva al boot)
+loginctl enable-linger "${KIOSK_USER}" 2>/dev/null || true
+
 cat > /etc/systemd/system/kiosk.service << SVCEOF
 [Unit]
 Description=Kiosk JavaFX Totem 24/7
-After=network-online.target systemd-user-sessions.service
+After=network-online.target systemd-user-sessions.service local-fs.target
 Wants=network-online.target
-StartLimitIntervalSec=300
-StartLimitBurst=10
+StartLimitIntervalSec=120
+StartLimitBurst=5
 
 [Service]
 Type=simple
 User=${KIOSK_USER}
+Group=${KIOSK_USER}
 WorkingDirectory=${APP_DIR}
 
-# Ambiente di base
+# Ambiente
 Environment="HOME=${KIOSK_HOME}"
+Environment="XDG_RUNTIME_DIR=/run/user/${KIOSK_UID}"
 Environment="XCURSOR_THEME=blank-cursor"
 Environment="XCURSOR_SIZE=24"
-Environment="XDG_RUNTIME_DIR=/run/user/${KIOSK_UID}"
 Environment="TOTEM_API_KEY=${API_KEY}"
 
-# Software rendering (compatibile con VM e hardware senza accelerazione)
+# Software rendering — compatibile con VM e hardware senza GPU
 Environment="LIBGL_ALWAYS_SOFTWARE=1"
+Environment="MESA_GL_VERSION_OVERRIDE=3.3"
+Environment="GALLIUM_DRIVER=softpipe"
 Environment="WLR_RENDERER=pixman"
 Environment="WLR_RENDERER_ALLOW_SOFTWARE=1"
 Environment="WLR_NO_HARDWARE_CURSORS=1"
 
-# Wayland via Cage (compositor minimale per kiosk)
+# Prepara runtime dir
 ExecStartPre=/bin/bash -c 'if [ -f ${APP_DIR}/.stop ]; then rm -f ${APP_DIR}/.stop; exit 1; fi'
 ExecStartPre=/bin/bash -c 'mkdir -p /run/user/${KIOSK_UID} && chmod 700 /run/user/${KIOSK_UID} && chown ${KIOSK_USER}:${KIOSK_USER} /run/user/${KIOSK_UID}'
+
+# Avvia Cage (Wayland compositor minimale) + app
 ExecStart=/usr/bin/dbus-run-session /usr/bin/cage -d -- ${APP_DIR}/run-kiosk.sh
 
 Restart=always
-RestartSec=3s
-MemoryMax=512M
-MemorySwapMax=256M
-WatchdogSec=3min
-NotifyAccess=none
+RestartSec=5s
+MemoryMax=600M
 OOMScoreAdjust=200
 
 StandardOutput=append:${APP_DIR}/logs/kiosk.log
@@ -588,83 +552,48 @@ NoNewPrivileges=true
 WantedBy=multi-user.target
 SVCEOF
 
-# ── Timer pulizia log ─────────────────────────────────────────────────────────
-cat > /etc/systemd/system/kiosk-logclean.service << 'LOGCLEAN'
+# Timer pulizia log
+cat > /etc/systemd/system/kiosk-logclean.service << 'L'
 [Unit]
 Description=Pulizia log kiosk
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c '
-    f=/opt/kiosk/logs/kiosk.log
-    [[ -f "$f" ]] && [[ $(wc -c < "$f") -gt 5242880 ]] && tail -1000 "$f" > "${f}.tmp" && mv "${f}.tmp" "$f"
-    journalctl --vacuum-size=50M 2>/dev/null || true
-'
-LOGCLEAN
-cat > /etc/systemd/system/kiosk-logclean.timer << 'LOGTIMER'
+ExecStart=/bin/bash -c 'f=/opt/kiosk/logs/kiosk.log; [[ -f "$f" ]] && [[ $(wc -c < "$f") -gt 5242880 ]] && tail -500 "$f" > "${f}.tmp" && mv "${f}.tmp" "$f"; journalctl --vacuum-size=50M 2>/dev/null||true'
+L
+cat > /etc/systemd/system/kiosk-logclean.timer << 'L'
 [Unit]
-Description=Pulizia log kiosk giornaliera
+Description=Pulizia log giornaliera
 [Timer]
 OnCalendar=daily
 Persistent=true
 [Install]
 WantedBy=timers.target
-LOGTIMER
+L
 
-# ── Riavvio notturno ──────────────────────────────────────────────────────────
-cat > /etc/systemd/system/kiosk-nightly-restart.service << 'NIGHTLY'
+# Riavvio notturno
+cat > /etc/systemd/system/kiosk-nightly-restart.service << 'N'
 [Unit]
 Description=Riavvio notturno kiosk
 [Service]
 Type=oneshot
 ExecStart=/bin/bash -c 'rm -f /opt/kiosk/.stop; systemctl restart kiosk.service'
-NIGHTLY
-cat > /etc/systemd/system/kiosk-nightly-restart.timer << 'NIGHTLYT'
+N
+cat > /etc/systemd/system/kiosk-nightly-restart.timer << 'N'
 [Unit]
-Description=Riavvio kiosk alle 04:00
+Description=Riavvio kiosk 04:00
 [Timer]
 OnCalendar=04:00
 RandomizedDelaySec=300
-Persistent=false
 [Install]
 WantedBy=timers.target
-NIGHTLYT
-
-# ── Network watchdog ──────────────────────────────────────────────────────────
-cat > /etc/systemd/system/kiosk-network-watchdog.service << 'NETWDOG'
-[Unit]
-Description=Kiosk network watchdog
-After=network-online.target
-[Service]
-Type=simple
-ExecStart=/bin/bash -c '
-    FAIL=0
-    while true; do
-        if curl -sf --max-time 5 https://hasanabdelaziz.altervista.org/api/v1/totem/ > /dev/null 2>&1; then
-            FAIL=0
-        else
-            FAIL=$((FAIL+1))
-            echo "[$(date)] Ping fallito ($FAIL)" >> /opt/kiosk/logs/network.log
-            if [[ $FAIL -ge 5 ]]; then
-                systemctl restart kiosk.service
-                FAIL=0
-            fi
-        fi
-        sleep 60
-    done
-'
-Restart=always
-RestartSec=10
-[Install]
-WantedBy=multi-user.target
-NETWDOG
+N
 
 ok "Servizi systemd creati."
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 7 — Auto-login TTY1
+#  FASE 8 — Auto-login TTY1
 # ═══════════════════════════════════════════════════════════════════════════════
 step "Auto-login TTY1"
-
 mkdir -p /etc/systemd/system/getty@tty1.service.d
 cat > /etc/systemd/system/getty@tty1.service.d/autologin.conf << EOF
 [Service]
@@ -676,12 +605,15 @@ EOF
 cat > "${KIOSK_HOME}/.bash_profile" << 'PROFILE'
 if [ "$(tty)" = "/dev/tty1" ]; then
     if systemctl is-active --quiet kiosk.service 2>/dev/null; then
-        echo "Kiosk attivo. Premi Invio per terminale."
+        echo "Kiosk attivo. Premi Invio per il terminale."
         read -r _
     else
         export XDG_RUNTIME_DIR="/run/user/$(id -u)"
         mkdir -p "$XDG_RUNTIME_DIR" && chmod 700 "$XDG_RUNTIME_DIR"
         export XCURSOR_THEME=blank-cursor
+        export LIBGL_ALWAYS_SOFTWARE=1
+        export WLR_RENDERER=pixman
+        export WLR_NO_HARDWARE_CURSORS=1
         sudo systemctl restart kiosk.service 2>/dev/null || \
             dbus-run-session cage -d -- /opt/kiosk/run-kiosk.sh
     fi
@@ -698,76 +630,51 @@ chmod 440 /etc/sudoers.d/kiosk
 ok "Auto-login configurato."
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 8 — Boot veloce
+#  FASE 9 — Boot veloce
 # ═══════════════════════════════════════════════════════════════════════════════
 step "Ottimizzazione boot"
-
 for svc in ModemManager bluetooth cups avahi-daemon \
            apt-daily.timer apt-daily-upgrade.timer \
-           dnf-makecache.timer man-db.timer logrotate.timer \
-           e2scrub_reap.service fstrim.timer; do
+           dnf-makecache.timer man-db.timer; do
     systemctl disable "${svc}" 2>/dev/null || true
     systemctl mask    "${svc}" 2>/dev/null || true
 done
-
 for i in 2 3 4 5 6; do
     systemctl mask "getty@tty${i}.service" 2>/dev/null || true
 done
-
 systemctl set-default multi-user.target
-
 if [[ -f /etc/default/grub ]]; then
     sed -i 's/^GRUB_TIMEOUT=.*/GRUB_TIMEOUT=2/' /etc/default/grub
-    sed -i 's/^GRUB_TIMEOUT_STYLE=.*/GRUB_TIMEOUT_STYLE=menu/' /etc/default/grub
     grep -q '^GRUB_TIMEOUT_STYLE' /etc/default/grub || \
         echo 'GRUB_TIMEOUT_STYLE=menu' >> /etc/default/grub
     update-grub 2>/dev/null || grub-mkconfig -o /boot/grub/grub.cfg 2>/dev/null || true
-    ok "GRUB: 2s timeout."
 fi
 ok "Boot ottimizzato."
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 9 — Permessi hardware
+#  FASE 10 — Permessi e abilitazione
 # ═══════════════════════════════════════════════════════════════════════════════
-step "Permessi hardware"
-
+step "Permessi hardware e abilitazione servizi"
 cat > /etc/udev/rules.d/99-kiosk.rules << 'UDEV'
-SUBSYSTEM=="drm",      TAG+="uaccess", GROUP="video"
-SUBSYSTEM=="input",    TAG+="uaccess", GROUP="input"
-SUBSYSTEM=="usb",      TAG+="uaccess"
-SUBSYSTEM=="graphics", TAG+="uaccess", GROUP="video"
+SUBSYSTEM=="drm",   TAG+="uaccess", GROUP="video"
+SUBSYSTEM=="input", TAG+="uaccess", GROUP="input"
+SUBSYSTEM=="usb",   TAG+="uaccess"
 UDEV
 udevadm control --reload-rules 2>/dev/null || true
 
 mkdir -p /etc/systemd/journald.conf.d/
-cat > /etc/systemd/journald.conf.d/kiosk.conf << 'JOURNAL'
+cat > /etc/systemd/journald.conf.d/kiosk.conf << 'J'
 [Journal]
 SystemMaxUse=50M
 RuntimeMaxUse=20M
 Compress=yes
 ForwardToSyslog=no
-MaxRetentionSec=7day
-JOURNAL
-ok "Permessi configurati."
-
-# ═══════════════════════════════════════════════════════════════════════════════
-#  FASE 10 — Abilitazione servizi
-# ═══════════════════════════════════════════════════════════════════════════════
-step "Abilitazione servizi"
+J
 
 systemctl daemon-reload
 systemctl enable kiosk.service
 systemctl enable kiosk-logclean.timer
 systemctl enable kiosk-nightly-restart.timer
-systemctl enable kiosk-network-watchdog.service
-[[ -f /etc/systemd/system/llamacpp.service ]] && \
-    systemctl enable llamacpp.service 2>/dev/null || true
-
-# Crea XDG runtime dir per kiosk
-mkdir -p "/run/user/${KIOSK_UID}"
-chmod 700 "/run/user/${KIOSK_UID}"
-chown "${KIOSK_USER}:${KIOSK_USER}" "/run/user/${KIOSK_UID}"
-
 ok "Servizi abilitati."
 
 # ═══════════════════════════════════════════════════════════════════════════════
@@ -777,20 +684,14 @@ echo ""
 echo "╔═══════════════════════════════════════════════════════════════════╗"
 echo "║                  SETUP COMPLETATO                                ║"
 echo "╠═══════════════════════════════════════════════════════════════════╣"
+echo "║  Distro: ${DISTRO} | GPU: ${GPU}                                 ║"
 echo "║                                                                   ║"
-echo "║  Installazione one-line:                                          ║"
-echo "║    curl -fsSL https://raw.githubusercontent.com/${GITHUB_USER}/${GITHUB_REPO}/main/setup-kiosk.sh | sudo bash"
+echo "║  Avvia subito:   systemctl start kiosk.service                   ║"
+echo "║  Oppure:         reboot                                           ║"
 echo "║                                                                   ║"
-echo "║  Reset completo:                                                  ║"
-echo "║    curl -fsSL ...setup-kiosk.sh | sudo bash -s reset             ║"
-echo "║                                                                   ║"
-echo "║  Manutenzione:                                                    ║"
-echo "║    kiosk-control status|restart|stop|log|update                  ║"
-echo "║    journalctl -u kiosk -f                                        ║"
-echo "║                                                                   ║"
-echo "║  Log: ${APP_DIR}/logs/                                            ║"
-echo "║                                                                   ║"
+echo "║  Diagnostica:    kiosk-control status                            ║"
+echo "║                  journalctl -u kiosk -f                          ║"
+echo "║                  tail -f /opt/kiosk/logs/kiosk.log               ║"
+echo "║                  tail -f /opt/kiosk/logs/kiosk-err.log           ║"
 echo "╚═══════════════════════════════════════════════════════════════════╝"
-echo ""
-echo "  Riavvia con:  reboot"
 echo ""
